{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 140,
  "lineage": "d4f77b6d-27e3-95f4-e291-6271d3e778ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07f919f92632ae971",
            "arn": "arn:aws:ec2:ap-south-1:121774053186:instance/i-04607f2d62442cae2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-instance-profile",
            "id": "i-04607f2d62442cae2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Batch-31-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0842084f39afe4d8a"
              }
            ],
            "primary_network_interface_id": "eni-0842084f39afe4d8a",
            "private_dns": "ip-10-0-0-157.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.157",
            "public_ip": "43.205.236.11",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-006dd0185577d26ff",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b7301ac5d7afecd0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066c44b05f4eb3222",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b7301ac5d7afecd0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "i-04607f2d62442cae2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.our-instance-profile",
            "aws_iam_role.our-iam-role",
            "aws_security_group.our-security-group",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_ami.latest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07f919f92632ae971",
            "arn": "arn:aws:ec2:ap-south-1:121774053186:instance/i-077c6e42accff42e0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077c6e42accff42e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "Batch-31-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ff6129961a35df10"
              }
            ],
            "primary_network_interface_id": "eni-0ff6129961a35df10",
            "private_dns": "ip-10-0-0-12.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.12",
            "public_ip": "65.0.100.77",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0470fff8fcdbc2991",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f717a99baac10ff4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066c44b05f4eb3222",
            "tags": {
              "Name": "nexus-server"
            },
            "tags_all": {
              "Name": "nexus-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f717a99baac10ff4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "i-077c6e42accff42e0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.our-security-group-for-nexus",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_ami.latest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonar-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07f919f92632ae971",
            "arn": "arn:aws:ec2:ap-south-1:121774053186:instance/i-0140aef678c98a02d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0140aef678c98a02d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "Batch-31-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0540782810a1d98a1"
              }
            ],
            "primary_network_interface_id": "eni-0540782810a1d98a1",
            "private_dns": "ip-10-0-0-194.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.194",
            "public_ip": "52.66.158.139",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01d3f90fa052ef323",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c4744abb97a3dd38"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066c44b05f4eb3222",
            "tags": {
              "Name": "sonar-server"
            },
            "tags_all": {
              "Name": "sonar-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4744abb97a3dd38"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "i-0140aef678c98a02d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.our-Security-Group-for-sonar",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_ami.latest",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "our-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121774053186:internet-gateway/igw-020a8821176a78123",
            "id": "igw-020a8821176a78123",
            "owner_id": "121774053186",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-IGW"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-IGW"
            },
            "vpc_id": "vpc-0fea9eb019dad4074"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "igw-020a8821176a78123",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "our-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-020a8821176a78123",
            "id": "r-rtb-0fc69955d76afc4071080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fc69955d76afc407",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0fc69955d76afc407"
          },
          "dependencies": [
            "aws_internet_gateway.our-igw",
            "aws_route_table.our-public-route-table",
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "our-public-route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-020a8821176a78123",
            "id": "r-rtb-049ab87f1a0a3ce061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-049ab87f1a0a3ce06",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-049ab87f1a0a3ce06"
          },
          "dependencies": [
            "aws_internet_gateway.our-igw",
            "aws_route_table.our-public-route-table2",
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121774053186:route-table/rtb-077a031095de2fec5",
            "id": "rtb-077a031095de2fec5",
            "owner_id": "121774053186",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fea9eb019dad4074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "rtb-077a031095de2fec5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-private-route-table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121774053186:route-table/rtb-0f04f3c22f90914cd",
            "id": "rtb-0f04f3c22f90914cd",
            "owner_id": "121774053186",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fea9eb019dad4074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "rtb-0f04f3c22f90914cd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121774053186:route-table/rtb-0fc69955d76afc407",
            "id": "rtb-0fc69955d76afc407",
            "owner_id": "121774053186",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fea9eb019dad4074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "rtb-0fc69955d76afc407",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-public-route-table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121774053186:route-table/rtb-049ab87f1a0a3ce06",
            "id": "rtb-049ab87f1a0a3ce06",
            "owner_id": "121774053186",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fea9eb019dad4074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "rtb-049ab87f1a0a3ce06",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-private-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083746e738258ba13",
            "region": "ap-south-1",
            "route_table_id": "rtb-077a031095de2fec5",
            "subnet_id": "subnet-0b221950105853173"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "rtbassoc-083746e738258ba13",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.our-private-route-table",
            "aws_subnet.our-private-subnet",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-private-route-table-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc88e0a16eb1391f",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f04f3c22f90914cd",
            "subnet_id": "subnet-0ab47fdd4b313f87e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "rtbassoc-0bc88e0a16eb1391f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.our-private-route-table2",
            "aws_subnet.our-private-subnet2",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-public-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d51347bce680e059",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fc69955d76afc407",
            "subnet_id": "subnet-066c44b05f4eb3222"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "rtbassoc-0d51347bce680e059",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.our-public-route-table",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-public-route-table-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074332b857e26142d",
            "region": "ap-south-1",
            "route_table_id": "rtb-049ab87f1a0a3ce06",
            "subnet_id": "subnet-042807dc9df47769b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "rtbassoc-074332b857e26142d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.our-public-route-table2",
            "aws_subnet.our-public-subnet2",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "our-Security-Group-for-sonar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121774053186:security-group/sg-0c4744abb97a3dd38",
            "description": "Our Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4744abb97a3dd38",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "OOur-Security-Group-for-sonar",
            "name_prefix": "",
            "owner_id": "121774053186",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-sonar"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-sonar"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fea9eb019dad4074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "sg-0c4744abb97a3dd38",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "our-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121774053186:security-group/sg-0b7301ac5d7afecd0",
            "description": "Our Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7301ac5d7afecd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Our-Security-Group",
            "name_prefix": "",
            "owner_id": "121774053186",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Our-Security-Group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fea9eb019dad4074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "sg-0b7301ac5d7afecd0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "our-security-group-for-nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121774053186:security-group/sg-0f717a99baac10ff4",
            "description": "Our Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f717a99baac10ff4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Our-Security-Group-for-nexus",
            "name_prefix": "",
            "owner_id": "121774053186",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-nexus"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Security-Group-for-nexus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fea9eb019dad4074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "sg-0f717a99baac10ff4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121774053186:subnet/subnet-0b221950105853173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b221950105853173",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "121774053186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet"
            },
            "vpc_id": "vpc-0fea9eb019dad4074"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "subnet-0b221950105853173",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121774053186:subnet/subnet-0ab47fdd4b313f87e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab47fdd4b313f87e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "121774053186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet2"
            },
            "vpc_id": "vpc-0fea9eb019dad4074"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "subnet-0ab47fdd4b313f87e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121774053186:subnet/subnet-066c44b05f4eb3222",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066c44b05f4eb3222",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "121774053186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "vpc_id": "vpc-0fea9eb019dad4074"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "subnet-066c44b05f4eb3222",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121774053186:subnet/subnet-042807dc9df47769b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042807dc9df47769b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "121774053186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "vpc_id": "vpc-0fea9eb019dad4074"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "subnet-042807dc9df47769b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "our-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:121774053186:vpc/vpc-0fea9eb019dad4074",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-022d7f05596a6ebcc",
            "default_route_table_id": "rtb-0793965072153a39b",
            "default_security_group_id": "sg-0cee09290cfd7dd53",
            "dhcp_options_id": "dopt-0c1d7ba19016558f6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fea9eb019dad4074",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0793965072153a39b",
            "owner_id": "121774053186",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "Our-VPC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121774053186",
            "id": "vpc-0fea9eb019dad4074",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}